[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/frontpage.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/HelpMe.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/LÃ¤skig_font.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 300.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = -124.0
margin_right = 177.0
margin_bottom = -100.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "             . ."

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.5
margin_top = -105.0
margin_right = 211.5
margin_bottom = -69.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fem natter hos Nathan"
align = 1
valign = 1

[node name="Main" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Quit" type="Button" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = 94.0
margin_right = -167.0
margin_bottom = 124.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Quit"

[node name="Start" type="Button" parent="Main"]
margin_left = -205.0
margin_top = -21.0
margin_right = -126.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 6 )
text = "Start"

[node name="Options" type="Button" parent="Main"]
margin_left = -211.0
margin_top = 24.0
margin_right = -108.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( -25, -154 )
custom_fonts/font = ExtResource( 6 )
text = "Options"

[node name="Controls" type="Button" parent="Main"]
margin_left = -209.0
margin_top = 70.0
margin_right = -106.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -25, -154 )
custom_fonts/font = ExtResource( 6 )
text = "Controls"

[node name="Options" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="Button" parent="Options"]
margin_left = 33.0
margin_top = 107.0
margin_right = 100.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 6 )
text = "Back"

[node name="Back" type="Button" parent="Options/Back"]
margin_left = 2.0
margin_top = 108.0
margin_right = 69.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 6 )
text = "Toggle fullscreen: ON"

[node name="Label3" type="Label" parent="Options"]
margin_left = 38.0
margin_top = 159.0
margin_right = 123.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( -7, 0 )
custom_fonts/font = SubResource( 3 )
text = "Volume"

[node name="Volumeslider" type="HSlider" parent="Options"]
margin_left = 30.0
margin_top = 190.0
margin_right = 207.0
margin_bottom = 206.0
value = 50.0

[node name="Controls" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="Button" parent="Controls"]
margin_left = 33.0
margin_top = 107.0
margin_right = 100.0
margin_bottom = 137.0
custom_fonts/font = ExtResource( 6 )
text = "Back"

[node name="Label3" type="Label" parent="Controls"]
margin_left = 144.0
margin_top = 110.0
margin_right = 229.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "Movment: WASD"

[node name="Label4" type="Label" parent="Controls"]
margin_left = 145.0
margin_top = 158.0
margin_right = 230.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 3 )
text = "Pick up item: Left mouse button"

[node name="Label5" type="Label" parent="Controls"]
margin_left = 144.0
margin_top = 207.0
margin_right = 229.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 3 )
text = "Flashlight: F"

[node name="Label6" type="Label" parent="Controls"]
margin_left = 143.0
margin_top = 251.0
margin_right = 258.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 3 )
text = "Interact: E"

[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Main/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Main/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Options/Back/Back" to="." method="_on_Back_pressed"]
[connection signal="changed" from="Options/Volumeslider" to="." method="_on_Volumeslider_changed"]
[connection signal="changed" from="Options/Volumeslider" to="." method="_on_HSlider_changed"]
[connection signal="pressed" from="Controls/Back" to="." method="_on_Back_pressed"]
